# job_scraper

./: README.md  docker-compose.yml
front_end/: Dockerfile  pyproject.toml
front_end/app/: main.py
web_scraper/: Dockerfile  pyproject.toml
web_scraper/api/: exemple.py  fast_api.py  models.py
web_scraper/app/: config.py  labels.py  mongo.py  scraper.py
