[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["AHO"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"
pymongo = "^4.7.2"
pydantic-settings = "^2.4.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
